# openai-snippets

./: README.md  mypy.ini  pyproject.toml
api/: cli.py  command.py
decorators/: __init__.py
python/: Pipfile  pyproject.toml
python/api/: chat.py  command.py
utils/: __init__.py
