[tool.poetry]
name = "openaist"
version = "0.1.0"
description = "openai related scripts"
authors = ["douglarek <douglarek@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.2"
click = "^8.1.3"
tiktoken = "^0.3.2"

[tool.poetry.scripts]
api = "api.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
mypy = "^1.1.1"
pre-commit = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
